--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/smsdb
+MONGO_URI=mongodb+srv://adijaiswal355:Avjbtw39zJg83uy3@cluster0.5hqvbso.mongodb.net/smsdb?retryWrites=true&w=majority
 PORT=3000
+
+
